# Laboratorio_Programmazione

./: CMakeLists.txt  ListaSpesa.cpp  ListaSpesa.h  ListaSpesa.hpp  Observer.h  Observer.hpp  Oggetto.cpp  Oggetto.h  Oggetto.hpp  READme.txt  Subject.h  Subject.hpp  Utente.h  Utente.hpp  main.cpp
Test/: CMakeLists.txt  ListaSpesaTest.cpp  OggettoTest.cpp  UtenteTest.cpp
Test/lib/googletest/: CMakeLists.txt
